#135: update to Java 11